new files for data fetching pipeline

--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -13,9 +13,11 @@ serde_json = "1.0.142"
 tokio = { version = "1.38", features = ["full"] }
 tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 url = "2.5.4"
-redis = { version = "0.25", features = ["tokio-comp"] }
 
-#  Enable chrono support for NaiveDateTime → ToSql compatibility
+# Redis with RustLS TLS enabled
+redis = { version = "0.25", features = ["tokio-comp", "tls-rustls"] }
+
+# Postgres + chrono date/time support
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
 
