--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -11,14 +11,20 @@ lazy_static = "1.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.142"
 tokio = { version = "1.38", features = ["full"] }
-tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
 url = "2.5.4"
+
+# WebSocket client over Rustls (drops OpenSSL dependency)
+tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
 # Redis with Rustls TLS over Tokio
 redis = { version = "0.25", features = ["tokio-rustls-comp", "tls-rustls"] }
 
+# Postgres + chrono + Rustls TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
+postgres-rustls = "0.12"
+rustls = "0.23"
+rustls-native-certs = "0.7"
 
 [[bin]]
 name = "websocket"
@@ -27,4 +33,3 @@ path = "src/bin/websocket.rs"
 [[bin]]
 name = "trigger"
 path = "src/bin/trigger.rs"
-
