--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.142"
 tokio = { version = "1.38", features = ["full"] }
 url = "2.5.4"
 
-# WebSocket client over Rustls (drops OpenSSL dependency)
+# WebSocket client over Rustls (uses system roots)
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
 # Redis with Rustls TLS over Tokio
@@ -22,7 +22,7 @@ redis = { version = "0.25", features = ["tokio-rustls-comp", "tls-rustls"] }
 # Postgres + chrono + Rustls TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
-postgres-rustls = "0.12"
+postgres_rustls = "0.12"
 rustls = "0.23"
 rustls-native-certs = "0.7"
 
