--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.142"
 tokio = { version = "1.38", features = ["full"] }
 url = "2.5.4"
 
-# WebSocket client over Rustls (uses system roots)
+# WebSocket client over Rustls (uses native OS root certs)
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
 # Redis with Rustls TLS over Tokio
@@ -22,9 +22,11 @@ redis = { version = "0.25", features = ["tokio-rustls-comp", "tls-rustls"] }
 # Postgres + chrono + Rustls TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
-postgres_rustls = "0.12"
-rustls = "0.23"
-rustls-native-certs = "0.7"
+postgres_rustls = "0.1.3"
+
+# Pin Rustls stack to the same major that above crates expect
+rustls = "0.21"
+rustls-native-certs = "0.6"
 
 [[bin]]
 name = "websocket"
