--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -16,12 +16,12 @@ url = "2.5.4"
 # WebSocket client over Rustls (uses native OS root certs)
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
-# Redis with Rustls TLS over Tokio
-redis = { version = "0.25", features = ["tokio-rustls-comp", "tls-rustls"] }
+# Redis with Rustls TLS over Tokio  (FIXED feature name)
+redis = { version = "0.25", features = ["tokio-comp", "tls-rustls"] }
 
 # Postgres + chrono + Rustls TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
-postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
+postgres-types  = { version = "0.2", features = ["with-chrono-0_4"] }
 postgres_rustls = "0.1.3"
 
 # Pin Rustls stack to the same major that above crates expect
