--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -4,13 +4,15 @@ FROM rust:1.88.0-slim AS builder
 WORKDIR /app
 COPY . .
 
-RUN apt-get update && apt-get install -y \
+# No OpenSSL needed (we use rustls)
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     pkg-config \
-    libssl-dev \
-    && rm -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/*
 
-RUN cargo build --release
+# Reproducible builds; smaller binaries
+ENV RUSTFLAGS="-C strip=symbols"
+RUN cargo build --release --locked
 
 
 # ------------------ Stage 2: Runtime Image -----------------------------
@@ -18,17 +20,26 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Copy Rust binaries
 COPY --from=builder /app/target/release/trigger ./trigger
 COPY --from=builder /app/target/release/websocket ./websocket
+
+# Copy project files needed at runtime (scripts, configs, requirements, etc.)
 COPY . .
 
-RUN apt-get update && apt-get install -y \
+# Minimal runtime deps: CA certs for rustls, git for push.py (if it uses git)
+RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     ca-certificates \
-    libssl-dev \
-    && rm -rf /var/lib/apt/lists/*
+    tzdata \
+ && rm -rf /var/lib/apt/lists/*
 
+# Python deps
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Optional: run as non-root (uncomment if your setup allows)
+# RUN useradd -m -u 10001 appuser && chown -R appuser:appuser /app
+# USER appuser
 
 ENV PYTHONUNBUFFERED=1
 ENV LOG_LEVEL=DEBUG
@@ -44,34 +55,25 @@ CMD ["sh", "-c", "\
     env | grep -E 'DATABASE_URL|REDIS_URL' || true; \
     python3 - <<'PY'\n\
 import os, re, sys, asyncio, asyncpg, redis\n\
-# Mask passwords when printing\n\
 def mask(url):\n\
     return re.sub(r':[^@]+@', ':***@', url)\n\
-\n\
-# --- Check DATABASE_URL ---\n\
 pg_url = os.getenv('DATABASE_URL')\n\
 if not pg_url:\n\
     print('❌ DATABASE_URL is missing or empty!', file=sys.stderr)\n\
     sys.exit(1)\n\
 print('[env] DATABASE_URL =', mask(pg_url))\n\
 pg_url = pg_url.replace('postgresql+asyncpg://', 'postgresql://')\n\
-\n\
-# --- Check REDIS_URL ---\n\
 rd_url = os.getenv('REDIS_URL')\n\
 if not rd_url:\n\
     print('❌ REDIS_URL is missing or empty!', file=sys.stderr)\n\
     sys.exit(1)\n\
 print('[env] REDIS_URL =', mask(rd_url))\n\
-\n\
-# --- Redis connection check ---\n\
 try:\n\
     r = redis.Redis.from_url(rd_url)\n\
     print('[health] Redis ping ->', r.ping())\n\
 except Exception as e:\n\
     print('❌ Redis connection failed:', e, file=sys.stderr)\n\
     sys.exit(1)\n\
-\n\
-# --- Postgres connection check ---\n\
 async def check_pg():\n\
     try:\n\
         conn = await asyncpg.connect(pg_url)\n\
@@ -80,7 +82,6 @@ async def check_pg():\n\
     except Exception as e:\n\
         print('❌ Postgres connection failed:', e, file=sys.stderr)\n\
         sys.exit(1)\n\
-\n\
 asyncio.run(check_pg())\n\
 PY\n\
     echo '🚀 Launching trigger and websocket...'; \
