--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -17,8 +17,8 @@ url = "2.5.4"
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
 # Redis with Rustls TLS over Tokio
-redis = { version = "0.25.4", features = ["tokio-comp", "tls-rustls"] }
-tokio-rustls = "0.24"          # <-- required so redis’s rustls TLS compiles (matches rustls 0.21)
+redis = { version = "0.25.4", features = ["tokio-rustls-comp", "tls-rustls"] }
+tokio-rustls = "0.24"  # matches rustls 0.21
 
 # Postgres + chrono + Rustls TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
