--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,38 +1,34 @@
 [package]
 name = "data_collection"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-chrono = "0.4.41"
-dotenv = "0.15.0"
-futures = "0.3.31"
-lazy_static = "1.5.0"
+chrono = "0.4"
+dotenv = "0.15"
+futures = "0.3"
+lazy_static = "1.5"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.142"
+serde_json = "1.0"
 tokio = { version = "1.38", features = ["full"] }
-url = "2.5.4"
+url = "2.5"
 
-# WebSocket client over Rustls (uses native OS root certs)
+# WebSocket client if needed
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 
-# Redis with Rustls TLS over Tokio
-redis = { version = "0.25.4", features = ["tokio-rustls-comp", "tls-rustls"] }
-tokio-rustls = "0.24"  # matches rustls 0.21
+# Redis with TLS
+redis = { version = "0.25.4", features = ["tokio-comp", "tls-rustls"] }
+tokio-rustls = "0.24"
 
-# Postgres + chrono + Rustls TLS
+# Postgres + chrono + TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
-postgres-types  = { version = "0.2", features = ["with-chrono-0_4"] }
+postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
 postgres_rustls = "0.1.3"
 
-# Pin Rustls stack to the same major that above crates expect
+# TLS certs
 rustls = "0.21"
 rustls-native-certs = "0.6"
 
 [[bin]]
-name = "websocket"
-path = "src/bin/websocket.rs"
-
-[[bin]]
-name = "trigger"
-path = "src/bin/trigger.rs"
+name = "fetcher"
+path = "src/fetcher.rs"
