--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -1,34 +1,32 @@
 [package]
 name = "data_collection"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 chrono = "0.4"
 dotenv = "0.15"
+tokio = { version = "1.38", features = ["full"] }
 futures = "0.3"
-lazy_static = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.38", features = ["full"] }
-url = "2.5"
-
-# WebSocket client if needed
-tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
-
-# Redis with TLS
 redis = { version = "0.25.4", features = ["tokio-comp", "tls-rustls"] }
 tokio-rustls = "0.24"
-
-# Postgres + chrono + TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
 postgres_rustls = "0.1.3"
-
-# TLS certs
 rustls = "0.21"
 rustls-native-certs = "0.6"
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+
 [[bin]]
 name = "fetcher"
-path = "src/fetcher.rs"
+path = "src/bin/fetcher.rs"
+
+[[bin]]
+name = "cleaner"
+path = "src/bin/cleaner.rs"
