--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -4,19 +4,25 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = "0.4"
-dotenv = "0.15"
-tokio = { version = "1.38", features = ["full"] }
+chrono = "0.4"                      # Still latest in 0.4.x series
+dotenv = "0.15"                      # Latest available is 0.15.x
+tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-redis = { version = "0.25.4", features = ["tokio-comp", "tls-rustls"] }
-tokio-rustls = "0.24"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+# Redis with TLS via rustls — auto-picks newest that works with Rust 1.88.0
+redis = { version = "*", features = ["tokio-comp", "tls-rustls"] }
+tokio-rustls = "*"
+rustls = "*"
+rustls-native-certs = "*"
+
+# Postgres with chrono & TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
-postgres_rustls = "0.1.3"
-rustls = "0.21"
-rustls-native-certs = "0.6"
+
+# `postgres_rustls` only goes up to 0.1.3 — but let Cargo choose the highest
+postgres_rustls = "*"
 
 [profile.release]
 opt-level = 3
