--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -4,25 +4,23 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = "0.4"                      # Still latest in 0.4.x series
-dotenv = "0.15"                      # Latest available is 0.15.x
-tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+dotenv = "0.15"
+tokio = { version = "1.38", features = ["full"] }
 futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-# Redis with TLS via rustls — auto-picks newest that works with Rust 1.88.0
-redis = { version = "*", features = ["tokio-comp", "tls-rustls"] }
-tokio-rustls = "*"
-rustls = "*"
-rustls-native-certs = "*"
+# Redis 0.32.x with TLS over Tokio
+redis = { version = "0.32", features = ["tokio-rustls-comp", "tls-rustls"] }
+tokio-rustls = "0.26"
+rustls = "0.23"
+rustls-native-certs = "0.8"
 
 # Postgres with chrono & TLS
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
-
-# `postgres_rustls` only goes up to 0.1.3 — but let Cargo choose the highest
-postgres_rustls = "*"
+postgres_rustls = "0.1.3"
 
 [profile.release]
 opt-level = 3
