--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -11,19 +11,14 @@ futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-# Redis 0.32.x with TLS (Rustls) over Tokio
-# One-liner that pulls both async + TLS (Rustls) support
-redis = { version = "0.32.5", features = ["tokio-rustls-comp"] }
+# Redis 0.32.x with native-tls over Tokio
+redis = { version = "0.32.5", features = ["tokio-comp", "tokio-native-tls-comp"] }
 
-# Rustls stack (used by redis TLS and postgres TLS)
-tokio-rustls = "0.26"
-rustls = "0.23"
-rustls-native-certs = "0.8"
-
-# Postgres with chrono & TLS
+# Postgres with chrono & native-tls
 tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
 postgres-types  = { version = "0.2", features = ["with-chrono-0_4"] }
-postgres_rustls = "0.1.3"
+postgres-native-tls = "0.5"
+native-tls = "0.2"
 
 [profile.release]
 opt-level = 3
