--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -22,9 +22,11 @@ postgres-native-tls = "0.5"
 # TLS support (OpenSSL via native-tls)
 native-tls = "0.2"
 
-# WebSocket client with native-tls
-tokio-tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
+# WebSocket client with native-tls and connect_async support
+tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "native-tls"] }
 tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
+
+# URL parsing
 url = "2.4"
 
 [profile.release]
